<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPergunta3">

    <RadioGroup
        android:id="@+id/rdgPergunta3"
        android:layout_width="371dp"
        android:layout_height="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdbAP3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtrdbAp3" />

        <RadioButton
            android:id="@+id/rdbBP3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtrdbBp3" />

        <RadioButton
            android:id="@+id/rdbCP3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtrdbCp3" />

        <RadioButton
            android:id="@+id/rdbDP3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtrdbDp3" />
    </RadioGroup>

    <Button
        android:id="@+id/btnOK3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="butaoOKP3"
        android:text="@string/btnOK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <TextView
        android:id="@+id/txtVNomeP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtVNome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/txtP3"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/txtVPontosP3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPontos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.599"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPergunta3"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />
</androidx.constraintlayout.widget.ConstraintLayout>