<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaPergunta5">

    <TextView
        android:id="@+id/txtVNomeP5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtVNome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/txtVPontosP5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPontos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.599"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPergunta5"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/txtP5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <Button
        android:id="@+id/btnOK5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="butaoOKP5"
        android:text="@string/btnOK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814" />

    <RadioGroup
        android:id="@+id/rdgPergunta5"
        android:layout_width="340dp"
        android:layout_height="225dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdbAP5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtrdbAp5" />

        <RadioButton
            android:id="@+id/rdbBP5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtrdbBp5" />

        <RadioButton
            android:id="@+id/rdbCP5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtrdbCp5" />

        <RadioButton
            android:id="@+id/rdbDP5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtrdbDp5" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>